--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
       <span class="small">by <a href="http://github.com/notfb">notfb</a></span></h1>
 
     <div class="description">
-      Some JMeter Samplers (just JUint4 atm)
+      JMeter JUnit4 Sampler (still alpha)
     </div>
 
     <h2>Install</h2>
