--- a/index.html
+++ b/index.html
@@ -61,10 +61,7 @@ see README</p>
 <h2>License</h2>
 <p>Apache License, Version 2.0</p>
 <h2>Authors</h2>
-<p>fb (fabian.bieker@web.de)<br/><br/>      </p>
-<h2>Contact</h2>
-<p>Fabian Bieker (fabian.bieker@web.de)<br/>      </p>
-
+<p>Fabian Bieker</p>
 
     <h2>Download</h2>
     <p>
