--- a/index.html
+++ b/index.html
@@ -62,6 +62,10 @@ see README</p>
 <p>Apache License, Version 2.0</p>
 <h2>Authors</h2>
 <p>Fabian Bieker</p>
+<h2>Credits</h2>
+<p>Thanks to <a href="http://www.beaglesoft.de/">BeagleSoft GmbH</a>
+for paying me to work on this. (Not working there anymore, but anyway
+...)</p>
 
     <h2>Download</h2>
     <p>
